// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainLayout should render menu items that match claims {"SQR": [Object]} 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "ability": Object {
              "action": "allot",
              "subject": "SQR/Tasks",
            },
          },
          "menuItem": true,
        },
        "path": "allot",
      },
    ],
    "component": [Function],
    "meta": Object {
      "activator": true,
      "activatorName": "Sound Quality Reporting",
      "menuIcon": "fas fa-headphones",
    },
    "path": "sqr/",
  },
]
`;

exports[`MainLayout should render menu items that match claims {"TE": [Object]} 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "ability": Object {
              "action": "view",
              "subject": "TE/MyTasks",
            },
          },
          "menuItem": true,
          "menuLinkName": "My Tasks",
        },
        "path": "my",
      },
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "ability": Object {
              "action": "upload",
              "subject": "TE/Task",
            },
          },
          "homePageLink": Object {
            "text": "Upload",
          },
          "menuItem": true,
        },
        "path": "upload",
      },
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "ability": Object {
              "action": "view",
              "subject": "TE/Task",
            },
          },
          "menuItem": false,
        },
        "path": "tasks/:taskId",
      },
    ],
    "component": [Function],
    "meta": Object {
      "activator": true,
      "activatorName": "Track Editing",
      "menuIcon": "fas fa-cut",
    },
    "path": "te/",
  },
]
`;
